[project]
name = "pyzutil"
version = "0.0.1"
authors = [
    { name="David Crayford", email="dcrayford@gmail.com" },
]
description = "z/OS utilities for Python"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: z/OS",
]

[project.urls]
"Homepage" = "https://github.com/daveyc/pyzutil"
"Bug Tracker" = "https://github.com/daveyc/pyzutil/issues"